fixed footer overflow

--- a/Stylesheets/commonStyles.css
+++ b/Stylesheets/commonStyles.css
@@ -99,14 +99,13 @@ nav ul {
 footer {
     background-color: var(--smokey_gray);
     color: white;
-    height: 15vh;
+    height: 30vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 20px, 20px, 0px, 20px;
+    padding: 20px;
     margin-top: auto;
-    margin-bottom: 0;
 }
 
 #footerLinkRow {
